--- a/config/example.config.json
+++ b/config/example.config.json
@@ -1,11 +1,13 @@
 {
   "development": {
-     "username": "root",
-    "password": null,
-    "database": "database_test",
+    
+    "username": "postgres",
+    "password": "admin",
+    "database": "fitness-app",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
+
   "test": {
     "username": "root",
     "password": null,
@@ -13,6 +15,7 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
+
   "production": {
     "username": "root",
     "password": null,
